--- a/css/custom.css
+++ b/css/custom.css
@@ -1,8 +1,9 @@
 .shower {
     --slide-ratio: calc(16 / 9);
-    --color-key: #ffd000;
-    --color-black: #444;
+    --color-key: #ee5a17;
+    --color-black: #111111;
     --color-heading: #202020;
+    --color-heading-shout: #ffffff;
     font: 400 24px/2 'Artegra Sans', sans-serif;
 }
 
@@ -15,11 +16,11 @@
 }
 
 .caption h1 {
-    color: var(--color-heading);
+    color: var(--color-heading-shout);
 }
 
 .caption p {
-    color: var(--color-heading);
+    color: var(--color-heading-shout);
 }
 
 .slide {
@@ -29,7 +30,7 @@
 }
 
 .slide .shout {
-    color: var(--color-heading);
+    color: var(--color-heading-shout);
     font-size: 80px;
 }
 
@@ -39,7 +40,7 @@
 }
 
 .slide::after {
-    color: var(--color-heading);
+    color: #fff;
     font-weight: 700;
     top: 30px;
     right: 30px;
@@ -50,7 +51,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #ffd000;
+    background-color: var(--color-key);
 }
 
 #cover h2 {
@@ -173,4 +174,9 @@ blockquote {
     color: #000;
     line-height: 1.3;
     font-family: "Times New Roman", serif;
+}
+
+.spurit-logo {
+    width: 130px !important;
+    display: inline-block;
 }
